[tool.poetry]
name = "rmlaparse"
version = "0.4.0"
description = ""
authors = ["Reuven Lerner <reuven@lerner.co.il>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = '3.0.0'
coverage = "^6.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"



[tool.poetry.scripts]
showlog = 'rmlaparse.main:run'
